# dinner-recipe-generator

./: .gitignore  CHALLENGE.md  CONVENTIONS.md  README.md  docker-compose.yml  pyproject.toml
src/whats_for_dinner/: config.py  custom_components.py  guardrails.py  ingestion.py  ingestion_test.py  main.py  main_test.py  models.py  pipelines.py  pipelines_test.py
